@startuml
'https://plantuml.com/class-diagram
hide circle
class PlansRepositoryBD <<interface>>

title Class Diagram / As User, I want to list all known Plans



class Plans{
    -name
    - description
    - numberOfMinutes
    -maximumNumberOfUsers
    -musicCollection
     -musicSuggestion
     -annualFee
     -monthlyFee
     -active
     -promoted
}
class PlansViewMapper{
    +toPlansView(List<Plans> plans):List<PlansView>
}
class PlansController{
     +findActive():ResponseEntity<List<PlansView>>
    }
class PlansService{
 +findActive():List<Plans>

}

interface PlansRepositoryBD
{
+findByActive_Active: List<Plans>
}

PlansController ..> PlansService: uses >
PlansService ..> PlansRepositoryBD: uses >
PlansRepositoryBD ..> Plans: < record
PlansController ..>PlansViewMapper: uses >
@enduml
